automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <ul>
             <li> <a href="#"> My Icebreakers </a> </li>
             <li> <a href="#"> Create </a> </li>
-            <h3> IceSocial </h3>
+            <h3> Icebreakers </h3>
           </ul>
         </nav>
       </header>
