--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
       <header>
-        <nav>
+        <nav id="main-navigation">
           <ul>
             <li> <a href="#"> My Icebreakers </a> </li>
             <li> <a href="#"> Create </a> </li>
