--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
 
   <body>
-
+      <header>
+        <nav id="main-navigation">
+          <ul>
+            <li> <a href="#"> My Icebreakers </a> </li>
+            <li> <a href="#"> Create </a> </li>
+          </ul>
+        </nav>
+        <h3> Icebreakers </h3>
+      </header>
   </body>
 </html>
